[package]
name = "elastiql"
version = "0.3.1"
authors = ["William Myers <mwilliammyers@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["builder"]

graphql = ["async-graphql"]
builder = ["typed-builder"]

[dependencies]
async-graphql = { version = "2", optional = true }
base64 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-builder = { version = "0.7", optional = true }

[dev-dependencies]
elasticsearch = "7.7.1-alpha.1"
tokio = { version = "0.2", default-features = false, features = ["macros", "tcp", "time"] }

[package.metadata.release]
consolidate-commits = true
pre-release-commit-message = "chore: release {{version}}"
