[package]
name = "elastiql"
version = "0.3.3"
description = "An opinionated Elasticsearch query language for Rust."
authors = ["William Myers <mwilliammyers@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxjar/elastiql"
keywords = ["elasticsearch", "graphql"]
edition = "2018"

[features]
default = ["builder"]

graphql = ["async-graphql"]
builder = ["typed-builder"]

[dependencies]
async-graphql = { version = "2", optional = true }
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-builder = { version = "0.9", optional = true }

[dev-dependencies]
elasticsearch = "7.11.0-alpha.1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
# IMPORTANT: remember to update the changelog before releasing
pre-release-replacements = [
    { file = "CHANGELOG.md", search = '## \[Unreleased\].*', replace = "### [v{{version}}](https://github.com/voxjar/elastiql/compare/v{{prev_version}}...v{{version}}) ({{date}})", prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Fixes', replace = "#### Fixes", prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Features', replace = "#### Features", prerelease = true },
]
